--- a/changelog.d/20240205_111044_paul.beslin.ext_hide_sca_ignored_incidents_all.md
+++ b/changelog.d/20240205_111044_paul.beslin.ext_hide_sca_ignored_incidents_all.md
@@ -1,3 +1,3 @@
 ### Changed
 
-- SCA incidents ignored on the GitGuardian app will no longer show up in the scan all results.
+- SCA incidents ignored on the GitGuardian app will no longer show up in the scan results, in text/JSON format.
